2016-02-16  Stefano Duhamel  <stefano.duhamel@supelec.fr>

	stk_predict_leaveoneout.m: Add a (currently failing) unit test

	* core/stk_predict_leaveoneout.m: Add a (currently failing) unit test.

2016-02-16  Julien Bect  <julien.bect@centralesupelec.fr>

	Get rid of iago/utils/get_lognoisevariance.m

	* iago/utils/get_lognoisevariance.m: Deleted.
	* iago/crit/stk_optim_crit_SUR.m: Do without it.
	* iago/crit/stk_optim_crit_iago.m: Idem.

	Get rid of noise_params_consistency

	* iago/utils/noise_params_consistency.m: Deleted.
	* iago/crit/stk_optim_crit_EI.m: Remove call to noise_params_consistency.
	* iago/crit/stk_optim_crit_SUR.m: Idem.
	* iago/crit/stk_optim_crit_iago.m: Idem.
	* iago/utils/stk_optim_addevals.m: Idem.

	Improve @stk_sampcrit_thresholdbasedoptim class

	* sampling/@stk_sampcrit_thresholdbasedoptim/stk_sampcrit_thresholdbasedoptim.m:
	Add properties threshold_quantile_order (public) and
	theshold_quantile_value (private).  Streamline input arguments processing.
	* sampling/@stk_sampcrit_thresholdbasedoptim/get_threshold_quantile_order.m:
	Fast getter for new public property.
	* sampling/@stk_sampcrit_thresholdbasedoptim/set_threshold_quantile_order.m:
	Fast setter for new public property.
	* sampling/@stk_sampcrit_thresholdbasedoptim/get_threshold_mode.m:
	Rename output argument.
	* sampling/@stk_sampcrit_thresholdbasedoptim/get_threshold_value.m:
	Rename output argument.
	* sampling/@stk_sampcrit_thresholdbasedoptim/set_threshold_mode.m:
	Fix bug. Accept mixed-case variants of mode string.
	* sampling/@stk_sampcrit_thresholdbasedoptim/set_threshold_value.m:
	Fix bug. Implement quantile case.
	* sampling/@stk_sampcrit_thresholdbasedoptim/disp.m:
	Display new public property. Change display layout.
	* sampling/@stk_sampcrit_thresholdbasedoptim/get.m:
	Use direct access to properties whenever possible.
	* sampling/@stk_sampcrit_thresholdbasedoptim/set.m:
	Add new public property.

2016-02-15  Julien Bect  <julien.bect@centralesupelec.fr>
